data/derived/comb/progs/unify/prog4810.ml.out
Characters 87-96:
  let f a x = sepConcat(h^sep t) in
                       ^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         string list -> string
